objects/SMAX_PS_ComplaintPart__c.object
<CustomObject>
    <label>Complaint Part</label>
    <nameField>
        <displayFormat>CPN-{0000000000}</displayFormat>
        <label>Complaint Part Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SMAX_PS_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Part</description>
        <inlineHelpText>Part</inlineHelpText>
        <label>Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Complaint Parts</relationshipLabel>
        <relationshipName>Complaint_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PartQty__c</fullName>
        <description>Part Qty</description>
        <inlineHelpText>Part Qty</inlineHelpText>
        <label>Part Qty</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Complaint__c</fullName>
        <label>Complaint</label>
        <referenceTo>SMAX_PS_Complaint__c</referenceTo>
        <relationshipLabel>Complaint Parts</relationshipLabel>
        <relationshipName>Complaint_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <description>Last Transaction Number</description>
        <inlineHelpText>Last Transaction Number</inlineHelpText>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PartNumber__c</fullName>
        <description>Part Number</description>
        <inlineHelpText>Part Number</inlineHelpText>
        <label>Part Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IsDefective__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Defective?</description>
        <inlineHelpText>Is Defective?</inlineHelpText>
        <label>Is Defective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PartDescription__c</fullName>
        <description>Part Description</description>
        <inlineHelpText>Part Description</inlineHelpText>
        <label>Part Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Complaint_Part_NumExternal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Complaint Part External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>